syntax = "proto3";

package myanimelist;

option go_package = "github.com/greenmochi/ultimate/services/myanimelist/proto/myanimelist";

import "message/myanimelist.proto";

// The nyaa service definition.
service MyAnimeList {
  rpc Ping (PingRequest) returns (PingReply);
  rpc GetUserAnimeList(message.Username) returns (message.UserAnimeList);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}